--- a/learning-graphql/package.json
+++ b/learning-graphql/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "learning-graphql",
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon -e js,json,graphql"
+  },
   "dependencies": {
     "apollo-server": "^2.17.0",
     "graphql": "^15.3.0",
